2011-01-26  Kevin B. Kenny  <kennykb@acm.org>

	* doc/tdbc_odbc.n:
	Added empty comment at the start of each manpage because 'man'
	interprets comments there as directives.
	
2011-01-22  Kevin B. Kenny  <kennykb@acm.org>

	* odbcStubDefs.txt: Added SQLMoreResults, needed for multiple result
	                    sets.
	* odbcStubInit.c:
	* odbcStubs.h:    make genstubs
	* tdbcodbc.c: Added a 'moreresults' method to the result set object
	              to allow for SQL statements that return multiple result
	              sets.
	              Fixed a resource leak in the case where bad parameters
	              are supplied to the 'foreignkeys' method.
	* tdbcodbc.test: Added tests that the 'moreresults' method works
	                 correctly in the event of 0, 1, and more than one
	                 result set.
	
2010-09-03  Kevin B. Kenny  <kennykb@acm.org>

	* tdbcodbc.test: Made tests more portable.

	* generic/odbcStubDefs.txt:
	* generic/tdbcodbc.c:
	* library/tdbcodbc.tcl:
	* tests/tdbcodbc.test:
			Added the 'primarykeys' and 'foreignkeys' methods,
			and the corresponding tests.
	* generic/odbcStubInit.c:
	* generic/odbcStubs.h:
			make genstubs

	* configure.in:
	* Makefile.in:
	* pkgIndex.tcl.in (new file):
	* README:
	* tclconfig/:	Upgraded the build to use TEA 3.9. Changed the
			approach to pkgIndex.tcl generation. (It's now built
			at configure time, rather than from the Makefile.)
			Advanced version number to 1.0b16.

	* configure: 	autoconf 2.59

2010-06-19  Kevin B. Kenny  <kennykb@acm.org>

	* Makefile.in:			Revised the code at the suggestion
	* generic/tdbcodbc.c:		of Andreas Kupries to avoid using
	* tests/all.tcl:		'tcl_findLibrary' and instead execute
	* tests/tdbcodbc.test:		both 'source' and 'load' commands from
					'pkgIndex.tcl'. Revised the 'make test'
					rule, and the test scripts, to
					test successfully under the new regime.
					Thanks to Andreas for providing the
					original patch, and to Joe English